[gd_scene load_steps=11 format=3 uid="uid://de4wbolycij03"]

[ext_resource type="Script" path="res://flow.gd" id="1_wmdaj"]
[ext_resource type="PackedScene" uid="uid://dvuhmjygma4ab" path="res://labelNode.tscn" id="2_ad2jk"]
[ext_resource type="PackedScene" uid="uid://t6o0x2m2jp62" path="res://inputNode.tscn" id="3_m671y"]
[ext_resource type="PackedScene" uid="uid://ctcf0cie727e3" path="res://gotoNode.tscn" id="3_x15c6"]
[ext_resource type="PackedScene" uid="uid://dcn1prov3crg6" path="res://referenceNode.tscn" id="4_y34kv"]
[ext_resource type="PackedScene" uid="uid://cwhur2udbumum" path="res://unknownNode.tscn" id="5_qus1i"]
[ext_resource type="Script" path="res://findNode.gd" id="6_c0mfa"]
[ext_resource type="PackedScene" uid="uid://dfh64ywusg2xq" path="res://return_cell.tscn" id="6_grnml"]
[ext_resource type="Script" path="res://ConfirmationDialog.gd" id="9_eddrg"]
[ext_resource type="Script" path="res://FlowActions.gd" id="10_p085w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmdaj")
label = ExtResource("2_ad2jk")
goto = ExtResource("3_x15c6")
input = ExtResource("3_m671y")
reference = ExtResource("4_y34kv")
returnc = ExtResource("6_grnml")
unknown = ExtResource("5_qus1i")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
zoom_max = 3.0
zoom_step = 0.5
show_arrange_button = false

[node name="GraphNode" type="GraphNode" parent="GraphEdit"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 130.0
mouse_filter = 1
title = "Find Node"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.427451, 0.682353, 0.603922, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("6_c0mfa")

[node name="Container" type="Container" parent="GraphEdit/GraphNode"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="GraphEdit/GraphNode"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button" type="Button" parent="GraphEdit/GraphNode"]
layout_mode = 2
text = "Find"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Are you sure you want to delete all selected nodes?"
script = ExtResource("9_eddrg")

[node name="PopupMenu" type="PopupMenu" parent="."]
title = "Flowchart Actions"
item_count = 3
item_0/text = "Find"
item_0/id = 0
item_1/text = "Sort"
item_1/id = 1
item_2/text = ""
item_2/id = 2
script = ExtResource("10_p085w")

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="popup_request" from="GraphEdit" to="." method="_on_graph_edit_popup_request"]
[connection signal="find" from="GraphEdit/GraphNode" to="." method="_on_graph_node_find"]
[connection signal="pressed" from="GraphEdit/GraphNode/Button" to="GraphEdit/GraphNode" method="_on_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_id_pressed"]
[connection signal="sortPressed" from="PopupMenu" to="." method="_on_popup_menu_sort_pressed"]
